--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver
-driverUrl=jdbc:mysql://localhost:3306/tmall
+driverUrl=jdbc:mysql://localhost:3306/tmall_ssm
 jdbc.username=user
 jdbc.password=zczjhykj
 #\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570
