--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
     </dependency>
+
+    <!--分页插件-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>spring-mybatis</finalName>
