refactor:pagehelper added

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,6 @@
 
   </dependencies>
   <build>
-    <finalName>spring-mybatis</finalName>
+    <finalName>SSM-Practice</finalName>
   </build>
 </project>
