--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
   <version>1.0-SNAPSHOT</version>
   <name>SSM Practice Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <encoding>UTF-8</encoding>
+  </properties>
   <dependencies>
     <!--单元测试-->
     <dependency>
