forestage:productPage section

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+  <context-param>
+    <param-name>contextPath</param-name>
+    <param-value>forehome</param-value>
+  </context-param>
 </web-app>
