--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
       <version>5.1.1</version>
     </dependency>
 
+      <!--StringUtils工具包-->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.4</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>SSM-Practice</finalName>
